# ouster-sdk

./: .clang-format  .clang-tidy  .clang-tidy-autofix  .clangd  .dockerignore  .gitignore  .gitmodules  .travis.yml  .travis.yml.swp  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  CMakeSettings.json  COPYRIGHT  Dockerfile  Jenkinsfile  LICENSE  LICENSE-bin  README-WINDOWS.md  README.md  README.rst  Security.md  VERSION  _clang-tidy.py  check_exports.py  clang-linting.sh  clang-tidy.sh  conanfile.py  package.xml  readme.md  run-clang-linting.sh  run-docker.sh  vcpkg.json
docs/: conf.py  (+6 more)
examples/: CMakeLists.txt  async_client_example.cpp  c_client_example.c  c_scan_source_example.c  client_example.cpp  client_packet_example.cpp  config_example.cpp  helpers.cpp  helpers.h  lidar_scan_example.cpp  mtp_client_example.cpp  osf_reader_example.cpp  osf_writer_example.cpp  representations_example.cpp  scan_source_example.cpp  slam_example.cpp  viz_events_example.cpp  viz_example.cpp  viz_mesh_example.cpp  viz_notifications_example.cpp  viz_screenshot_example.cpp  zone_monitor_zone_set.cpp  zone_monitor_zone_states.cpp
examples/compiled_in_linking_example/: CMakeLists.txt  Dockerfile  example.bash  main.cpp  readme.rst
examples/hil/: CMakeLists.txt
examples/linking_example/: CMakeLists.txt  Dockerfile  example.bash  main.cpp  readme.rst
examples/shared_linking_example/: CMakeLists.txt  Dockerfile  example.bash  readme.rst
examples/static_linking_example/: CMakeLists.txt  Dockerfile  example.bash  readme.rst
ouster_c/: CMakeLists.txt
ouster_c/include/: ouster_c.h
ouster_c/src/: ouster_c.cpp  ouster_scan_source_c.cpp
ouster_client/: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  package.xml  readme.md
ouster_client/cmake/: ouster_clientConfig.cmake
ouster_client/src/: beam_config.cpp  buffered_udp_source.cpp  chanfield.cpp  client.cpp  cloud_io.cpp  compat.cpp  compat_ops.cpp  curl_client.h  error_handler.cpp  example.cpp  field.cpp  http_client.h  image_processing.cpp  io_type.cpp  json_tools.cpp  lidar_scan.cpp  lidar_scan_set.cpp  logging.cpp  logging.h  main.cpp  mesh.cpp  metadata.cpp  multi_scan_source.cpp  netcompat.cpp  normals.cpp  open_source.cpp  os1.cpp  os1_util.cpp  packet.cpp  packet_source.cpp  parsing.cpp  pose_conversion.cpp  pose_util.cpp  profile_extension.cpp  scan_source.cpp  scan_source_utils.cpp  sensor_client.cpp  sensor_http.cpp  sensor_http.h  sensor_http_imp.cpp  (+25 more)
ouster_description/: CMakeLists.txt  package.xml
ouster_description/launch/: load.launch  os1_gazebo.test  os1_world.launch  view_urdf.launch
ouster_description/rviz/: example.rviz
ouster_description/tests/: os1_gazebo.test  os1_gazebo2.test
ouster_description/urdf/: OS1-64.urdf.xacro  example.urdf.xacro  ouster.urdf  ouster.urdf.xacro  ouster_standalone.urdf.xacro
ouster_description/worlds/: example.world
ouster_library/: CMakeLists.txt
ouster_mapping/: CMakeLists.txt
ouster_mapping/src/: absolute_point_constraint_impl.cpp  absolute_pose_constraint.cpp  absolute_pose_constraint_impl.cpp  active_time_correction.cpp  active_time_correction.h  constraint_config.cpp  deskew_method.cpp  kiss_icp.cpp  kiss_icp.h  kiss_localization.cpp  kiss_localization.h  kiss_slam.cpp  kiss_slam.h  localization_engine.cpp  point_to_point_constraint.cpp  point_to_point_constraint_impl.cpp  pose_optimizer.cpp  pose_optimizer_node.cpp  pose_to_pose_constraint.cpp  pose_to_pose_constraint_impl.cpp  preprocessing.cpp  slam_engine.cpp  slam_util.cpp  slam_util.h  trajectory.cpp  utils.cpp
ouster_osf/: CHANGELOG.rst  CMakeLists.txt  README.rst
ouster_osf/cmake/: osf_fb_utils.cmake
ouster_osf/fb/: chunk.fbs  header.fbs  metadata.fbs
ouster_osf/src/: async_writer.cpp  basics.cpp  buffer.cpp  chunk.cpp  collation_stream.cpp  compat_ops.cpp  compat_ops.h  crc32.cpp  fb_common.cpp  fb_common.h  fb_utils.cpp  fb_utils.h  file.cpp  fpnge.cc  fpnge.h  json_utils.cpp  json_utils.h  layout_standard.cpp  layout_streaming.cpp  memory_mapped_osf_file.cpp  meta_extrinsics.cpp  meta_lidar_sensor.cpp  meta_streaming_info.cpp  metadata.cpp  metadata_impl.cpp  offset.cpp  operations.cpp  osf_scan_source.cpp  pcap_source.cpp  png_lidarscan_encoder.cpp  png_tools.cpp  png_tools.h  qoi.h  reader.cpp  reader_base.cpp  sensor_info_stream.cpp  stream_lidar_scan.cpp  stream_osf_file.cpp  writer.cpp  writerv2.cpp  (+3 more)
ouster_osf/tests/: CMakeLists.txt  basics_test.cpp  common.h  crc_test.cpp  file_ops_test.cpp  file_test.cpp  meta_streaming_info_test.cpp  metadata_tests.cpp  operations_test.cpp  osf_test.h  pcap_source_test.cpp  png_tools_test.cpp  reader_test.cpp  writer_custom_test.cpp  writer_test.cpp  writerv2_test.cpp
ouster_pcap/: CMakeLists.txt
ouster_pcap/cmake/: Findlibtins.cmake
ouster_pcap/src/: indexed_pcap_reader.cpp  ip_reassembler.cpp  ip_reassembler.h  os_pcap.cpp  pcap.cpp  (+2 more)
ouster_ros/: CMakeLists.txt  Dockerfile  README.md  nodelets_os.xml  os1.launch  ouster.launch  package.xml  readme.md  viz.rviz
ouster_sensor/: CMakeLists.txt
ouster_viz/: CMakeLists.txt  README.md  package.xml  readme.md
python/: .flake8  CMakeLists.txt  Dockerfile  MANIFEST.in  README.rst  docker_install_reqs.sh  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
tests/: CMakeLists.txt  array_view_test.cpp  bcompat_meta_json_test.cpp  bcompat_sensor_info_data.h  beam_config_test.cpp  cartesian_test.cpp  destagger_test.cpp  field_test.cpp  fusa_profile_test.cpp  lidar_scan_test.cpp  mesh_test.cpp  metadata_errors_test.cpp  metadata_test.cpp  nmea_parsing_test.cpp  open_source_test.cpp  packet_writer_test.cpp  parsing_benchmark_test.cpp  pcap_test.cpp  point_viz_indexed_test.cpp  point_viz_test.cpp  pose_tools_test.cpp  profile_extension_test.cpp  scan_batcher_test.cpp  sensor_test.cpp  sha256_test.cpp  slam_test.cpp  stl_test.cpp  test_utils.cpp  test_utils.h  threadsafe_queue_test.cpp  triangle_test.cpp  udp_queue_test.cpp  util.h  vcpkg.json  vector_streambuf_test.cpp  zone_header_test.cpp  zone_monitor_test.cpp  zone_monitor_voxel_mesh_test.cpp  zone_render_test.cpp  zrb_test.cpp
(+965 files in other folders)
