<?xml version="1.0"?>
<package format="2">
  <name>ouster_client</name>
  <version>0.1.0</version>
  <description>The os1_client package</description>
  <maintainer email="oss@ouster.io">ouster developers</maintainer>
  <license>BSD</license>
  <build_depend>libjsoncpp</build_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>libjsoncpp</exec_depend>
  <export></export>
</package>
