<?xml version="1.0"?>
<package format="2">
  <name>ouster_description</name>
  <version>1.0.7</version>
  <description>
    URDF and meshes describing Ouster laser scanners.
  </description>

  <license>BSD</license>
  <author>Wil Selby</author>
  <maintainer email="accounts@wilselby.com">Wil Selby</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>rostest</test_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
